Closed
Bug 759169
Opened 13 years ago
Closed 13 years ago
RenderTrace.cpp doesn't compile when MOZ_RENDERTRACE is enabled
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
RESOLVED
FIXED
mozilla15
People
(Reporter: dhylands, Assigned: dhylands)
Details
Attachments
(1 file)
1.40 KB,
patch
|
BenWa
:
review+
|
Details | Diff | Splinter Review |
If I try to enable MOZ_RENDERTRACE by uncommenting the line in gfx/layers/RenderTrace.h, then I get the following errors:
/home/work/B2G/gecko/gfx/layers/RenderTrace.cpp: In function 'gfx3DMatrix mozilla::layers::GetRootTransform(mozilla::layers::Layer*)':
/home/work/B2G/gecko/gfx/layers/RenderTrace.cpp:19: error: passing 'const gfx3DMatrix' as 'this' argument of 'gfx3DMatrix& gfx3DMatrix::ProjectTo2D()' discards qualifiers
/home/work/B2G/gecko/gfx/layers/RenderTrace.cpp: In function 'void mozilla::layers::RenderTraceLayers(mozilla::layers::Layer*, const char*, gfx3DMatrix, bool)':
/home/work/B2G/gecko/gfx/layers/RenderTrace.cpp:30: error: passing 'const gfx3DMatrix' as 'this' argument of 'gfx3DMatrix& gfx3DMatrix::ProjectTo2D()' discards qualifiers
which occurs because ProjectTo2D modifies its matrix, but GetTransform returns a const ref.
Comment 1•13 years ago
|
||
You just need to copy it first then it will work. Would be nice if you posted a patch.
Assignee | ||
Comment 2•13 years ago
|
||
Comment 3•13 years ago
|
||
Comment on attachment 627793 [details] [diff] [review]
Fix for compile error when MOZ_RENDERTRACE is enabled.
Drive-by review. LGTM
Attachment #627793 -
Flags: review+
Assignee | ||
Updated•13 years ago
|
Whiteboard: checkin-needed
Comment 4•13 years ago
|
||
It was on my hg outgoing but I forgot to push it:
https://hg.mozilla.org/integration/mozilla-inbound/rev/b48fd5b2b84e
Whiteboard: checkin-needed
Comment 5•13 years ago
|
||
Assignee: nobody → dhylands
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla15
You need to log in
before you can comment on or make changes to this bug.
Description
•