Bug 759169 - Fix for compile error when MOZ_RENDERTRACE is enabled. r=bgirard

--HG--
extra : rebase_source : 56d1c44d4efeea7b2237385f560fad856dae15a4